# infobot_visualization

./: README.md
infobot_rviz_longterm/: CMakeLists.txt  package.xml  plugin_description.xml
infobot_rviz_longterm/src/: color_utils.h  point_cloud2_display.cpp  point_cloud2_display.h  point_cloud2_longterm_display.cpp  point_cloud2_longterm_display.h  point_cloud_common.cpp  point_cloud_common.h  point_cloud_longterm.cpp  point_cloud_longterm.h  point_cloud_transformer.h  point_cloud_transformers.cpp  point_cloud_transformers.h
infobot_rviz_map/: CMakeLists.txt  package.xml  plugin_description.xml
infobot_rviz_map/src/: color_utils.h  map_display.cpp  map_display.h  pmap_display.cpp  pmap_display.h  poctomap_display.cpp  poctomap_display.h
infobot_rviz_pose_tool/: CMakeLists.txt  package.xml  plugin_description.xml
infobot_rviz_pose_tool/include/infobot_rviz_pose_tool/: pose_tool.h
infobot_rviz_pose_tool/src/: pose_tool.cpp
infobot_rviz_topo_map/: CMakeLists.txt  package.xml  plugin_description.xml
infobot_rviz_topo_map/include/infobot_rviz_topo_map/: topo_map_display.h  topo_place_visual.h
infobot_rviz_topo_map/src/: topo_map_display.cpp  topo_place_visual.cpp
infobot_rviz_topo_map/test/: real-floor4-topo.yaml  real-floor4.pgm  real-floor4.yaml  rviz.rviz  test.launch
