<?xml version="1.0"?>
<package>
  <name>infobot_rviz_map</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: 3D visualization tools for maps
  </description>
  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>infobot_map_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>infobot_map_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
