<package>
  <name>infobot_rviz_topo_map</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: RVIZ plugin for visualization of topological maps.
  </description>
  <author>Andrzej Pronobis</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>infobot_topo_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>infobot_topo_msgs</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
